# lambda-extension-telemetry

./: Pulumi.yaml  README.md  __main__.py  extension.Dockerfile  handler.Dockerfile  pyproject.toml
.github/workflows/: build.yaml
dockerfiles/: render.py  template.Dockerfile
dockerfiles/3.10/: Dockerfile
dockerfiles/3.11/: Dockerfile
dockerfiles/3.7/: Dockerfile
dockerfiles/3.8/: Dockerfile
dockerfiles/3.9/: Dockerfile
example/: Dockerfile  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  handler.Dockerfile  handler.py  pyproject.toml
example/handler/: handler.py
extensions/: telemetry_extension
handler/: handler.py
telemetry_extension/: extension.py  extensions_api_client.py  logging_config.py  telemetry_api_client.py  telemetry_dispatcher.py  telemetry_http_listener.py
