[tool.poetry]
name = "lambda-extension-test"
version = "0.1.0"
description = ""
authors = ["Abrorjon Ruziboev <abror.ruzibayev@gmail.com>"]
readme = "README.md"
packages = [{include = "lambda_extension_test"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
python-logging-loki = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
